--- a/index.html
+++ b/index.html
@@ -14,14 +14,20 @@
       <nav>
         <ul class="navlinks">
           <li>
-            <a href="#homepage"><i class="fa fa-home"></i> </a>
+            <a href="#homepage">
+              <i class="fa fa-home"></i>
+            </a>
           </li>
-          <li><a href="#menupage">Menu</a></li>
-          <li><a href="#locationpage">Location</a></li>
+          <li>
+            <a href="#menupage"><i class="fa fa-list-alt"></i></a>
+          </li>
+          <li>
+            <a class="locationtip" href="#locationpage"
+              ><i class="fa fa-map-marker"></i>
+            </a>
+          </li>
         </ul>
       </nav>
-
-      <a class="cta" href="#"><button>Contact</button></a>
     </header>
     <!--NAVIGATION-->
 
@@ -36,28 +42,32 @@
 
     <!--MENU-->
     <section class="fullmenu" id="menupage">
-      <section class="menu_display">
-        Click me to get info on the item !
+      <section>
+        <img
+          class="menu-display"
+          src="./images/menu/bestburgerBig.jpg"
+          alt="food"
+        />
       </section>
 
       <section class="menu">
         <section class="maindish">
           <img
             class="maindish1"
-            src="./images/menu/bestburger.jpg"
+            src="./images/menu/bestburgerSmall.jpg"
             alt="bestburger"
           />
           <h1 class="itemtitle">Best Burger</h1>
           <img
             class="maindish2"
-            src="./images/menu/superbestburger.jpg"
+            src="./images/menu/superbestburgerSmall.jpg"
             alt="bestburger"
           />
           <h1 class="itemtitle">Best Burger 2</h1>
 
           <img
             class="maindish3"
-            src="./images/menu/doublebestburger.jpg"
+            src="./images/menu/doublebestburgerSmall.jpg"
             alt="bestburger"
           />
           <h1 class="itemtitle">Best Burger 3</h1>
@@ -65,17 +75,29 @@
 
         <section class="sidedishes">
           <section class="sidedish">
-            <img class="sidedish1" src="./images/menu/bestfries.jpg" alt="" />
+            <img
+              class="sidedish1"
+              src="./images/menu/bestfriesSmall.jpg"
+              alt=""
+            />
             <h1 class="itemtitle2">Best Fries</h1>
           </section>
 
           <section class="sidedish">
-            <img class="sidedish2" src="./images/menu/bestchips.jpg" alt="" />
+            <img
+              class="sidedish2"
+              src="./images/menu/bestchipsSmall.jpg"
+              alt=""
+            />
             <h1 class="itemtitle2">Best Chips</h1>
           </section>
 
           <section class="sidedish">
-            <img class="sidedish3" src="./images/menu/bestcola.jpg" alt="" />
+            <img
+              class="sidedish3"
+              src="./images/menu/bestcolaSmall.jpg"
+              alt=""
+            />
             <h1 class="itemtitle2">Best Soda</h1>
           </section>
         </section>
@@ -88,10 +110,15 @@
       <img class="map" src="./images/map.jpg" alt="im the map" />
       <section>
         <h1 class="location_title1">
-          Come visit us at 9999 burger rd, burger city burger state. Contact our
-          cutomer service or store at (999)-999-9999 if we're unable to get back
-          to you leave a voicemail and well get back to you as soon as we can.
+          Come visit us at 9999 burger rd, burger city burger state
         </h1>
+        <h1 class="location_title1">
+          Contact our cutomer service or store at (999)-999-9999 if we're unable
+          to get back to you leave a voicemail and well get back to you as soon
+          as we can
+        </h1>
+
+        <br />
         <h1 class="location_title2">
           Dont just take our word for it find out for yourself... try the best
           burger in the world today
@@ -101,7 +128,9 @@
     <!--LOCATION-->
 
     <!--FOOTER-->
-    <section class="footer" id="footerpage"><p>footer</p></section>
+    <section class="footer" id="footerpage">
+      <p>THE BEST BURGERS IN THE WORLD 2020</p>
+    </section>
     <!--FOOTER-->
 
     <script src="./scripts/script.js"></script>
